@@ -135,7 +135,7 @@ enum FuncCode
 	LFUN_GETBUFNAME,
 	LFUN_SERVER_GET_XY,
 	LFUN_SERVER_SET_XY,
-	LFUN_SPLIT_VIEW,
+	LFUN_VIEW_SPLIT,
 	LFUN_LINEATCURSOR,
 	// 90
 	LFUN_SERVER_GET_LAYOUT,
