@@ -82,6 +82,9 @@ The following LyX functions have been changed:
 -  LFUN_CLOSE_TAB_GROUP_CLOSE ("close-tab-group") was renamed to
    LFUN_TAB_GROUP_CLOSE ("tab-group-close").
 
+-  LFUN_SPIT_VIEW ("split-view") was renamed to
+   LFUN_VIEW_SPLIT ("view-split").
+
 The following LyX key bindings have been changed:
 
 //template, remove this entry later on
